# rubix

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  _config.yml  command_list.txt  controller.cpp  controller.hpp  cube.cpp  cube.h  cube.hpp  game.config  main.cpp  menu.cpp  menu.hpp  parser.cpp  rotate.cpp  setup.sh  start_message  test.cpp  utils.cpp  utils.h  utils.hpp  view.cpp  view.h  view.hpp
include/: benchmark.hpp  controller.hpp  converter.hpp  cube.hpp  solver.hpp  test.hpp  utils.hpp
other/: Doxyfile  example.gifZone.Identifier  game.md  menu.md
solver/: Doxyfile  README.md
solver/include/: controller.hpp  converter.hpp  menu.hpp  solver.hpp  utils.hpp  view.hpp
solver/other/: installation.md  menu.md
solver/src/: controller.cpp  converter.cpp  cube.cpp  main.cpp  menu.cpp  solver.cpp  view.cpp
src/: benchmark.cpp  controller.cpp  converter.cpp  cube.cpp  main.cpp  menu.cpp  solver.cpp  test.cpp  utils.cpp  view.cpp
